examples-java/kubernetes/guestbook-deployment.yaml
###############################################################################
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-service
  labels:
    app: guestbook-service
    visualize: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guestbook-service
      serving: "true"
  template:
    metadata:
      labels:
        app: guestbook-service
        version: "latest"
        serving: "true"
        visualize: "true"
      annotations:
        visualizer/uses: mysql
    spec:
      containers:
      - name: guestbook-service
        image: saturnism/guestbook-service:latest
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        ports:
        - name: http
          containerPort: 8080
