examples-java/kubernetes/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    visualize: "true"
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels: 
        app: mysql
        visualize: "true"
    spec:
      containers: 
      - name: mysql
        image: mysql:8
        resources:
          limits :
            cpu: 500m
        ports: 
        - containerPort: 3306
          name: mysql
        volumeMounts:
          # name must match the volume name below
        - name: mysql-persistent-storage
          # mount path within the container
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
