examples-java/kubernetes/zipkin-deployment.yaml
###############################################################################
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###############################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: zipkin
    visualize: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
        version: "latest"
        visualize: "true"
    spec:
      containers:
      - name: zipkin
        image: gcr.io/stackdriver-trace-docker/zipkin-collector
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /health.json
            port: 9411
        ports:
        - name: http
          containerPort: 9411
