examples-java/kubernetes/guestbook-service.yaml
###############################################################################
# Copyright 2015 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
###############################################################################

kind: Service
apiVersion: v1
metadata:
  name: guestbook-service
  labels:
    app: guestbook-service
    visualize: "true"
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: guestbook-service
    serving: "true"
